--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarMainActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:background="?attr/colorPrimary">
 
         <TextView
             android:id="@+id/textViewMainActivityName"
@@ -47,7 +47,8 @@
         android:layout_marginRight="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbarMainActivity" />
+        app:layout_constraintTop_toBottomOf="@id/toolbarMainActivity"
+        android:spinnerMode="dialog"/>
 
     <TextView
         android:id="@+id/textViewThemeChoice"
@@ -71,7 +72,8 @@
         android:layout_marginRight="20dp"
         app:layout_constraintLeft_toLeftOf="@id/spinnerLoc"
         app:layout_constraintRight_toRightOf="@id/spinnerLoc"
-        app:layout_constraintTop_toBottomOf="@id/spinnerLoc" />
+        app:layout_constraintTop_toBottomOf="@id/spinnerLoc"
+        android:spinnerMode="dialog"/>
 
     <Button
         android:id="@+id/btnOk"
@@ -83,8 +85,7 @@
         android:layout_marginTop="20sp"
         android:text="@string/btn_ok"
         android:textSize="20sp"
-        android:background="@drawable/corners"
-        android:backgroundTint="@android:color/darker_gray"/>
+        android:background="@drawable/corners"/>
 
     <TextView
         android:id="@+id/textView"
@@ -97,7 +98,6 @@
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:text="@string/text_view_text"
-        android:textSize="18sp"
-        android:textColor="@android:color/black" />
+        android:textSize="18sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
